<resources>
    <string name="app_name">F I A N C Y</string>
    <string name="SignIn">Sign In</string>
    <string name="welcomemsg">Hi There! Let Us Find Your Soul-Mate...</string>
    <string name="email1st">Email</string>
    <string name="emailplaceholder">Enter Your Email Here</string>
    <string name="password1st">Password</string>
    <string name="placeholderpwd">Enter Your Password Here</string>
    <string name="donthaveacc">Don\'t Have an Account? Sign Up</string>
    <string name="signup">Sign Up</string>
    <string name="fill_in_the_details">Fill in the details</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nevermarried">Never Married</string>
    <string name="married">Married</string>
    <string name="address">Address</string>
    <string name="contact_details">Contact details</string>
    <string name="add_photos">Add Photos</string>
    <string name="cancel">cancel</string>
    <string name="next">next</string>
    <string name="agree_state">I have read and agree to the terms of services.</string>
    <string name="word_limit_warn">Fee calculated according to words limit.</string>
    <string name="phonenumber">Phone Number</string>
    <string name="nameplaceholder">Your Name</string>
    <string name="phoneplceholder">Your Phone Number</string>
    <string name="termsofservices">I agree to the Terms of Services and Privacy Policy.</string>
    <string name="updateprofile">Update Profile</string>
    <string name="updtprofilepwd">Current Password</string>
    <string name="newpwd">New Password</string>
    <string name="yourcurrentpwd">Your Current Password</string>
    <string name="urnewpswd">Your New Password</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="update_advertisement">Update Advertisement</string>
    <string name="delete_advertisement">Delete Advertisement</string>
    <string name="confirm_advertisement">Confirm advertisement</string>
    <string name="Login_paypal">Login</string>
    <string name="Description"><![CDATA[I come from an upper middle class family. The most important thing in my life is religious believes, moral values & respect for elders. I am modern thinker but also believe in good values given by our ancestors.]]></string>
    <string name="select_reason">Select Reason</string>
    <string name="your_email">Your Email</string>
    <string name="wrong_ad">report</string>
    <string name="reason"> Is there something wrong with this ad ?</string>
    <string name="report_reason">Select reason</string>
    <string name="email">Your Emali</string>
    <string name="button">SENT</string>
    <string name="post_ad">Post your ad</string>
    <string name="report_ad">Report this ad</string>
    <string name="pr_age">Age</string>
    <string name="pr_gen">Gender</string>
    <string name="ok">ok</string>
    <string name="religion">Religion</string>
    <string name="educational_qualification">Educational Qualification</string>
    <string name="nationality">Nationality</string>
    <string name="message">Message</string>
    <string name="pr_email">email</string>
    <string name="nishan_g">Nishan G</string>
    <string name="name">Nishan G</string>
    <string name="location">Nittanbuwa, Sri Lanka</string>
    <string name="age_39">39 Years</string>
    <string name="Religion">Buddhist</string>
    <string name="profe">Manager HR</string>
    <string name="name_3">Dijani A</string>
    <string name="relig">Buddhist</string>
    <string name="loca">Horana, Sri Lanka</string>
    <string name="age_3">32 Years</string>
    <string name="gen">Female</string>
    <string name="pro">Teacher</string>
    <string name="name_2">Kalhari R</string>
    <string name="locati">Gampaha, Sri Lanka</string>
    <string name="age_2">30 Years</string>
    <string name="gende">Female</string>
    <string name="religi">Buddhist</string>
    <string name="professti">Goverment Service</string>
    <string name="name_1">Jane Doe</string>
    <string name="loc">Galle, Sri Lanka</string>
    <string name="age_1">28 Years</string>
    <string name="gend">Male</string>
    <string name="reli">Buddhist</string>
    <string name="prof">IT Professional</string>
    <string name="locatio">Galle, Sri Lanka</string>
    <string name="name_4">Jone Doe</string>
    <string name="_28_years">age_4</string>
    <string name="profess">IT Professional</string>
    <string name="national">Sinhala</string>
    <string name="professio">Master\'s Degree or Equivalent</string>
    <string name="name_5">Kalhara M</string>
    <string name="loca1">Galle, Sri Lanka</string>
    <string name="male_5">Male</string>
    <string name="rel_5">Buddhist</string>
    <string name="pro_3">IT Professional</string>
    <string name="name_7">Kalhari R</string>
    <string name="loca_3">Gampaha, Sri Lanka</string>
    <string name="age_6">30 Years</string>
    <string name="gen_4">Female</string>
    <string name="reli_7">Buddhist</string>
    <string name="Accept_Ad">Accept</string>
    <string name="Reject_Ad">Reject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Reject_Reason">Reason to Reject</string>
    <string name="Reason">Reason</string>
    <string name="Discard_Rejection">Discard</string>
    <string name="Reason_report">Reason</string>
    <string name="Submit">Submit</string>
    <string name="primeDesc1">10% discount on the advertisement.</string>
    <string name="primeDesc2">Unlock Match Finder.</string>
    <string name="primeDesc3">Cost : Rs.5000/=</string>
    <string name="buyprime">Buy Fiancy Premium</string>
    <string name="ADLive">Status : No Ads Posted.</string>
    <string name="primeaccount">Premium Account</string>
    <string name="successPayment">Advertisement Payment Successful</string>
    <string name="matchFinder">Match Finder</string>
    <string name="payForAd">Pay for Ad</string>
    <string name="editAd">Edit Ad</string>
    <string name="foundedMatches">Possible Matches</string>
    <string name="devorced">Devorced</string>
    <string name="separated">Separated</string>
    <string name="unmarried">Unmarried</string>
    <string name="widowed">Widowed</string>
    <string name="profession">Profession</string>
    <string name="min_education_level">Min Education Level</string>
    <string name="hobbies">Hobbies</string>
    <string name="my_profile">My Profile</string>
    <string name="my_advertisements">My Advertisements</string>
    <string name="become_premium">Become Premium</string>
    <string name="log_out">Log Out</string>
    <string name="welcome_to_fiancy">Welcome to Fiancy</string>
    <string name="freemium_account">Freemium Account</string>
    <string name="SPreligion">Religion</string>
    <string name="declaration">Created by SCNC Daemon Demons for MAD project</string>
    <string name="Accept_Report_add">Accept rejection</string>
    <string name="Discard_reject_ad">Discard rejection</string>
    <string name="pending_payment_state">Pending Payment State</string>
    <string name="Payment">Proceed Payment</string>

    <!--    String array for min education level-->
    <string-array name="CI_MinEducation">
        <item>Up to GCE O/L</item>
        <item>Up to GCE A/L</item>
        <item>Diploma</item>
        <item>Professional Qualification</item>
        <item>Undergraduate</item>
        <item>Bachelor\'s Degree or Equivalent</item>
        <item>Post Graduate Diploma</item>
        <item>Master\'s Degree or Equivalent</item>
        <item>Phd or Post Doctoral</item>
    </string-array>

<!--    String array for religions-->
    <string-array name="CI_Religions">
        <item>Buddhist</item>
        <item>Catholic</item>
        <item>Cristian</item>
        <item>Islam</item>
        <item>Hinduism</item>
    </string-array>

    <array name="NPReason_Array">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </array>

</resources>

