<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostAdActivity"
    android:orientation="vertical">
    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill_in_the_details"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:paddingTop="16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Horizontal_grey"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="16sp"
            android:paddingTop="25dp"
            android:layout_marginLeft="34dp"/>

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="left"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="16sp"
            android:paddingTop="25dp"
            android:layout_marginLeft="34dp"/>
        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="left"/>

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="16sp"
            android:paddingTop="25dp"
            android:layout_marginLeft="34dp"/>
        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="14sp"
                android:layout_marginLeft="65dp"
                android:layout_marginRight="15dp"/>
            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="14sp"/>
        </RadioGroup>
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:paddingTop="25dp"
            android:layout_marginLeft="34dp"/>
        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="left"/>
        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="16sp"
            android:paddingTop="25dp"
            android:layout_marginLeft="34dp"/>
        <RadioGroup
            android:id="@+id/radioGroupStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radioUnmarried"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unmarried"
                android:textSize="14sp"
                android:layout_marginRight="10dp"/>
            <RadioButton
                android:id="@+id/radioDivorced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/married"
                android:textSize="14sp"
                android:layout_marginRight="10dp"/>
            <RadioButton
                android:id="@+id/radioWidow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widow"
                android:textSize="14sp"/>
        </RadioGroup>
        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp"
            android:paddingTop="25dp"
            android:layout_marginLeft="34dp"/>
        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:textSize="14dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>

</LinearLayout>